sorting of pubs

--- a/libscm.bib
+++ b/libscm.bib
@@ -26,12 +26,14 @@
   title = {{Short-term Memory for Self-collecting Mutators}},
   institution = {University of Salzburg},
   number = {TR 2010--03},
-  year = {2010}
+  year = {2010},
+  month = mar
 }
 @techreport{SBG1006,
   author = {Martin Aigner and Andreas Haas and Christoph M. Kirsch and Ana Sokolova},
   title = {{Short-term Memory for Self-collecting Mutators - Revised Version}},
   institution = {University of Salzburg},
   number = {TR 2010--06},
-  year = {2010}
+  year = {2010},
+  month = jun
 }
